test/syntaxerrors/TestIllegalClassName2.jdc
class foo {
    //Should not pass
}